--- a/src/pages/PageStyles/PageStyles.css
+++ b/src/pages/PageStyles/PageStyles.css
@@ -25,10 +25,10 @@
 }
 
 .calendar-view-home {
-  max-height: 90vh;
+  max-height: 80vh;
   background-color: var(--light-gray);
   border-radius: 2rem;
-  padding: 5%;
+  padding: 3%;
   grid-row-start: 1;
   grid-row-end: 5;
   grid-column-start: 1;
@@ -133,8 +133,8 @@
   border: none;
   justify-content: center;
   align-items: center;
-  padding-top: 1.2rem;
-  padding-bottom: 1.2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   width: 100%;
   height: 100%;
   background-color: var(--light-gray);
@@ -212,7 +212,7 @@
   gap: 1rem;
   overflow-y: auto;
   padding-right: 10px;
-  max-height: 80%;
+  max-height: 30vw;
 }
 
 .schedule-view-container::-webkit-scrollbar {
